Finish working on very basic HTML layout. Will edit as I go along.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>The Protector of the System</title>
 </head>
 <body>
-    
+    <header>
+        <div class="title-container">
+            <h1>Icetra Kudosaki</h1>
+            <h2>Beloved Child of Heroism & Wielder of The Weaver</h2>
+        </div>
+        <nav class="navigation">
+            <a href="#" class="nav-links"><li></li></a>
+            <a href="#" class="nav-links"><li></li></a>
+            <a href="#" class="nav-links"><li></li></a>
+            <a href="#" class="nav-links"><li></li></a>
+            <a href="#" class="nav-links"><li></li></a>
+        </nav>
+    </header>
+    <main>
+        <section class="left-column-section">
+
+        </section>
+        <section class="left-column-section">
+
+        </section>
+        <section class="middle-row-section">
+
+        </section>
+        <section class="right-column-section">
+
+        </section>
+        <section class="right-column-section">
+
+        </section>
+    </main>
+    <footer>
+        <section class="footer-section">
+
+        </section>
+    </footer>
 </body>
 </html>
