Worked and finished star animation with css/js.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
     <title>The Protector of the System</title>
 </head>
 <body>
@@ -19,6 +21,9 @@
             <a href="#" class="nav-links"><li></li></a>
         </nav>
     </header>
+
+    <div class="galaxy-animation"></div>
+
     <main>
         <section class="left-column-section">
 
