Worked/finish basic nav

--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
     <title>The Protector of the System</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navigation">
+            <a href="/" class="logo">Logo</a>
+
+            <div class="hamburger">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </div>
+
+            <div class="nav__link hide">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Experience</a>
+                <a href="#">Inventory</a>
+                <a href="#">Current Effects</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
