--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="/" class="logo">Logo</a>
+            <div class="logo">
+                <img src="./assets/icetra-chibi.png" alt="Icetra chibi!">
+            </div>
 
             <div class="hamburger">
                 <span class="line"></span>
@@ -29,7 +31,7 @@
                 <a href="#">About</a>
                 <a href="#">Experience</a>
                 <a href="#">Inventory</a>
-                <a href="#">Current Effects</a>
+                <a href="#" class="animate__animated animate__heartBeat">Current Effects</a>
             </div>
         </nav>
     </header>
