Finished introduction part

--- a/index.html
+++ b/index.html
@@ -35,5 +35,16 @@
             </div>
         </nav>
     </header>
+
+    <main class="main-content">
+        <section class="introduction">
+            <h1 class="title-name"><span class="name">Icetra</span>, The Protectorate of The System</h1>
+            <p class="title-subtext">A Symbol of Goodwill, Hope, and Heroism</p>
+            <q>Creator or creature, be it hero or villain, will forevermore possess and wield<br />
+            enough malice to be vanquished. For the Protectorate does not discriminate. <br />
+            - Prophecy #143, Part 3 of 12</q>
+        </section>
+    </main>
+
 </body>
 </html>
